--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "next": "16.1.6",
     "react": "19.2.3",
     "react-confetti": "^6.4.0",
-    "react-dom": "19.2.3",
-    "react-use": "^17.6.0"
+    "react-dom": "19.2.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
